Deploy all .zip files from the build artifacts

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -30,6 +30,6 @@ deploy:
   subject: salchint
   repo: tclap
   package: tclap
-  artifact: tcalp-include.zip
+  artifact: /.*\.zip/
   publish: true
   override: true
