--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,35 +1,45 @@
-version: 1.0.{build}
+version: 1.2.2.{build}
+
 image: Visual Studio 2017
+
 branches:
   only:
     - master
     - /feat\/.*/
+
 configuration: Release
+
 platform:
-- x86
+  - x86
+
 before_build:
-- ps: >-
-      nuget restore msc/tclap-beta.sln
+  - ps: >-
+    nuget restore msc/tclap-beta.sln
+
 build:
   project: msc/tclap-beta.sln
   parallel: true
   verbosity: normal
+
 test:
   assemblies:
     only:
-    - msc\test\bin\Release\tclap.test.dll
+      - msc\test\bin\Release\tclap.test.dll
+
 after_test:
-- ps: Compress-Archive -Force -Path include -DestinationPath tclap-include.zip
+  - ps: Compress-Archive -Force -Path include -DestinationPath tclap-include_{version}.zip
+
 artifacts:
-- path: tclap-include.zip
+  - path: tclap-include_{version}.zip
+
 deploy:
-- provider: BinTray
-  username: salchint
-  api_key:
-    secure: 9O8IbiaO8ClOoN88xpPPeVMI6cr7pyP397cZnWkoVlSK1rgK1tubuHcVBuGckAZF
-  subject: salchint
-  repo: tclap
-  package: tclap
-  artifact: /.*\.zip/
-  publish: true
-  override: true
+  - provider: BinTray
+    username: salchint
+    api_key:
+      secure: 9O8IbiaO8ClOoN88xpPPeVMI6cr7pyP397cZnWkoVlSK1rgK1tubuHcVBuGckAZF
+    subject: salchint
+    repo: tclap
+    package: tclap
+    artifact: /.*\.zip/
+    publish: true
+    override: true
