Add static code analysis to the build pipeline (#4)
* Enable code analysis in the MSVC compiler

Here I introduce two different static code analysis tools. First the
MSVC built-in /analyze compiler switch. Second we call CppCheck if it is
installed (in a predefined path).

* Install build-prerequisite CppCheck

This is currently only true for the AppVeyor based build pipeline.
CppCheck is used in post-build steps if installed.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,11 @@ configuration: Release
 platform:
   - x86
 
+install:
+  - ps:
+      Start-FileDownload 'https://github.com/danmar/cppcheck/releases/download/1.88/cppcheck-1.88-x64-Setup.msi';
+      msiexec /passive /i cppcheck-1.88-x64-Setup.msi
+
 before_build:
   - ps: nuget restore msc/tclap-beta.sln
 
