--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -106,7 +106,8 @@ TESTS = test1.sh \
 		test107.sh \
 		test108.sh \
 		test109.sh \
-		test110.sh
+		test110.sh \
+		test111.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -215,6 +216,7 @@ EXTRA_DIST = $(TESTS) \
 			 test107.out \
 			 test108.out \
 			 test109.out \
-			 test110.out
+			 test110.out \
+			 test111.out
 
 CLEANFILES = tmp.out
