Add test (failing) for bug #25
https://sourceforge.net/p/tclap/bugs/25/

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -107,7 +107,8 @@ TESTS = test1.sh \
 		test108.sh \
 		test109.sh \
 		test110.sh \
-		test111.sh
+		test111.sh \
+		test112.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -217,6 +218,7 @@ EXTRA_DIST = $(TESTS) \
 			 test108.out \
 			 test109.out \
 			 test110.out \
-			 test111.out
+			 test111.out \
+			 test112.out
 
 CLEANFILES = tmp.out
