Set execute bit on .py files, not .sh files
Fixes a problem with configure not finding .sh files after they were removed in previous commit.

--- a/configure.ac
+++ b/configure.ac
@@ -29,4 +29,4 @@ AC_OUTPUT([ Makefile \
 		   msc/Makefile  \
 		   msc/examples/Makefile  \
 		   tests/Makefile], \
-		   [chmod a+x $ac_top_srcdir/tests/*.sh])
+		   [chmod a+x $ac_top_srcdir/tests/*.py])
