Set runtime output dirs for Debug and Release builds.
This makes the example binaries and up in .../examples/ instead of e.g., .../examples/Debug when building with VS. This will make it easier to test across Win/*NIX platforms.

Also make sure we have a python interpreter for running tests.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,6 @@
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
+
 # Check we don't define any hard symbols in the headers
 add_executable(test-hard test-hard-1.cpp test-hard-2.cpp)
 target_include_directories(test-hard PUBLIC ../include/)
