--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,13 @@
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
+SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
+
+include(FindPythonInterp)
 enable_testing()
 
 file(GLOB TEST_FILES test[0-9]*.py)
 foreach(file ${TEST_FILES})
   get_filename_component(file_basename ${file} NAME_WE)
   add_test(NAME ${file_basename}
-    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
     ${file_basename})
 endforeach()
