Try to make test_runner work on Azure dev pipelines
It's failing with errors like:
Process not started
 D:/a/1/s/tests/simple_test.py

so I suspect ${PYTHON_EXECUTABLE} evaluates to nothing, checked docs and apparently correct one is ${Python3_EXECUTABLE}.

Also return error code from test_runner.py to signal pass/fail.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,6 @@ file(GLOB TEST_FILES test[0-9]*.py)
 foreach(file ${TEST_FILES})
   get_filename_component(file_basename ${file} NAME_WE)
   add_test(NAME ${file_basename}
-    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
+    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
     ${file_basename})
 endforeach()
