Export and use python3 interpreter found by CMake.
(suspect python3 may not have been in PATH on Azure)

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,6 +2,7 @@ SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
 SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
 
 find_package(Python3)
+set(ENV{CMAKE_PY3_EXECUTABLE} ${Python3_EXECUTABLE})
 enable_testing()
 
 file(GLOB TEST_FILES test[0-9]*.py)
