Let's just pass the python binary to simple_test.py for now.
It appears it's not obvious how to pass environment to tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,7 +2,6 @@ SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
 SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
 
 find_package(Python3)
-set(ENV{CMAKE_PY3_EXECUTABLE} ${Python3_EXECUTABLE})
 enable_testing()
 
 file(GLOB TEST_FILES test[0-9]*.py)
@@ -10,5 +9,5 @@ foreach(file ${TEST_FILES})
   get_filename_component(file_basename ${file} NAME_WE)
   add_test(NAME ${file_basename}
     COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
-    ${file_basename})
+    ${Python3_EXECUTABLE} ${file_basename})
 endforeach()
