Cleanup examples CMakeLists and make sure config.h can be found

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,20 +6,22 @@ SET(msvc_cxx "$<COMPILE_LANG_AND_ID:CXX,MSVC>")
 
 function(default_opts target)
 target_compile_options(${target} PRIVATE
-  "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-Wall;-Wextra;-Weffc++>>"
-  "$<${msvc_cxx}:$<BUILD_INTERFACE:-W3>>"
+    "$<${gcc_like_cxx}:$<BUILD_INTERFACE:-Wall;-Wextra;-Weffc++>>"
+    "$<${msvc_cxx}:$<BUILD_INTERFACE:-W3>>"
 )
 endfunction(default_opts)
 
+function(add_example name)
+    add_executable(${name} ${ARGN})
+    target_include_directories(${name} PUBLIC ../include/ ${PROJECT_BINARY_DIR})
+    default_opts(${name})
+endfunction()
+
 # Check we don't define any hard symbols in the headers
-add_executable(test-hard test-hard-1.cpp test-hard-2.cpp)
-target_include_directories(test-hard PUBLIC ../include/)
-default_opts(test-hard)
+add_example(test-hard test-hard-1.cpp test-hard-2.cpp)
 
 file(GLOB TEST_FILES test[0-9]*.cpp)
 foreach(file ${TEST_FILES})
-             get_filename_component(file_basename ${file} NAME_WE)
-             add_executable(${file_basename} ${file})
-             target_include_directories(${file_basename} PUBLIC ../include/)
-	     default_opts(${file_basename})
+    get_filename_component(file_basename ${file} NAME_WE)
+    add_example(${file_basename} ${file})
 endforeach()
