Only include TCLAPConfig.h if building via CMake.
If anyone just copies the sources they should not need TCLAPConfig.h. The defaults are almost always good, and overrides can be put into custom header or compiler flags.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(TCLAP VERSION 1.4.0)
 
 set(CMAKE_CXX_STANDARD 98)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+add_definitions(-DHAVE_TCLAP_CONFIG_H)
 
 include(CheckCXXSourceCompiles)
 check_cxx_source_compiles("#include <strstream>
