Find python3 packages in a way that works on Ubuntu 18

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,13 +1,13 @@
 SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${OUTPUT_DIRECTORY}")
 SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${OUTPUT_DIRECTORY}")
 
-find_package(Python3)
+find_package(PythonInterp 3 REQUIRED)
 enable_testing()
 
 file(GLOB TEST_FILES test[0-9]*.py)
 foreach(file ${TEST_FILES})
   get_filename_component(file_basename ${file} NAME_WE)
   add_test(NAME ${file_basename}
-    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
-    ${Python3_EXECUTABLE} ${file_basename})
+    COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/simple_test.py
+    ${PYTHON_EXECUTABLE} ${file_basename})
 endforeach()
