--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -20,7 +20,7 @@ test13_SOURCES = test13.cpp
 test14_SOURCES = test14.cpp
 test15_SOURCES = test15.cpp
 test16_SOURCES = test16.cpp
-test17_SOURCES = test17.cpp test17-a.cpp
+test17_SOURCES = test-hard-1.cpp test-hard-2.cpp
 test18_SOURCES = test18.cpp
 test19_SOURCES = test19.cpp
 test20_SOURCES = test20.cpp
