Check arguments vector is not empty before accessing first element.
Some users use TCLAP to parse messages sent between long-running
programs by puting arguments in a std::vector<std::string> and use
CmdLine::parse to parse it. Passing an empty vector to parse results
in a segmentation violation (due to the fact that we always expect to
be able to pop the first element). Change the behaviour to throw a
more user friendly error message.

https://sourceforge.net/p/tclap/bugs/30/

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -88,7 +88,8 @@ TESTS = test1.sh \
 		test86.sh \
 		test87.sh \
 		test88.sh \
-		test89.sh
+		test89.sh \
+		test90.sh
 
 EXTRA_DIST = $(TESTS) \
 			 test1.out \
@@ -179,6 +180,7 @@ EXTRA_DIST = $(TESTS) \
 			 test86.out \
 			 test87.out \
 			 test88.out \
-			 test89.out
+			 test89.out \
+			 test90.out
 
 CLEANFILES = tmp.out
