Add some generated file types to gitignore (and sort it).

--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,30 @@
-*.gcno
-*.gcda
-*.o
-*~
 *#
+*.gcda
+*.gcno
 *.in
-cov/
+*.o
+*.orig
+*.pyc
+*~
+Makefile
 aclocal.m4
 autom4te.cache/
+build/
 config.log
 config.status
 config/Makefile
 config/Makefile.in
 config/config.h*
 config/stamp-h1
+config/test-driver
 configure
+cov/
 docs/Doxyfile
 docs/html/
 examples/.deps/
-examples/test[0-9][0-9]
 examples/test[0-9]
-Makefile
+examples/test[0-9][0-9]
 tclap.pc
-config/test-driver
-tests/tmp.out
 tests/test*.log
 tests/test*.trs
+tests/tmp.out
