Add some generated file types to gitignore (and sort it).

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,33 @@
-*.gcno
-*.gcda
-*.o
-*~
 *#
+*.gcda
+*.gcno
+*.in
+*.o
 *.orig
 *.patch
 *.pyc
+*~
+.vs/
+Makefile
+aclocal.m4
+autom4te.cache/
+build/
+config.log
+config.status
+config/Makefile
+config/Makefile.in
+config/config.h*
+config/stamp-h1
+config/test-driver
+configure
 cov/
 docs/Doxyfile
 docs/html/
-build/
+examples/.deps/
+examples/test[0-9]
+examples/test[0-9][0-9]
 inst/
-.vs/
+tclap.pc
+tests/test*.log
+tests/test*.trs
+tests/tmp.out
