Fix a bug where help output would crash if the program name was 3 chars.
https://sourceforge.net/p/tclap/patches/17/

Also added some very basic support for unit tests. We can look at pulling in some more robust unit testing framework later on, but for now keeping it simple to avoid bloat.

In addition, consider only platform specific path separators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,4 +28,5 @@ install(FILES "${PROJECT_BINARY_DIR}/tclap/TCLAPConfig.h"
 add_subdirectory(docs)
 add_subdirectory(examples)
 add_subdirectory(tests)
+add_subdirectory(unittests)
 add_subdirectory(include/tclap)
