Modernize automake config.
https://www.gnu.org/software/automake/manual/automake.html#Modernize-AM_005fINIT_005fAUTOMAKE-invocation

--- a/configure.ac
+++ b/configure.ac
@@ -1,8 +1,8 @@
-AC_INIT(Makefile.am)
-#AC_PREREQ(2.50)
 AC_CONFIG_AUX_DIR(config)
+AC_INIT([tclap], [1.2.4])
 AM_CONFIG_HEADER(config/config.h)
-AM_INIT_AUTOMAKE(tclap,1.2.4)
+AC_CONFIG_SRCDIR([examples/test1.cpp])
+AM_INIT_AUTOMAKE
 AC_PROG_CXX
 AC_CXX_HAVE_SSTREAM
 AC_CXX_HAVE_STRSTREAM
